--- a/styles.css
+++ b/styles.css
@@ -18,6 +18,12 @@ header {
     background-color: #fff;
 }
 
+.portfolio {
+    padding: 20px;
+    margin: 20px;
+    background-color: #fff;
+}
+
 footer {
     background-color: #333;
     color: #fff;
