--- a/styles.css
+++ b/styles.css
@@ -18,11 +18,25 @@ header {
     background-color: #fff;
 }
 
-.portfolio {
-    padding: 20px;
-    margin: 20px;
-    background-color: #fff;
+/* Estilo para a lista não ordenada */
+ul {
+  list-style-type: none; /* Remove os marcadores padrão da lista */
+  padding: 0; /* Remove o preenchimento padrão da lista */
 }
+
+/* Estilo para os itens da lista */
+ul li {
+  padding: 10px 0; /* Adiciona um espaçamento interno de 10 pixels entre os itens */
+  border-bottom: 1px solid #ccc; /* Adiciona uma linha divisória entre os itens */
+}
+
+/* Estilo para os links dentro dos itens da lista */
+ul li a {
+  text-decoration: none; /* Remove o sublinhado padrão dos links */
+  color: #333; /* Define a cor do texto dos links */
+  font-weight: bold; /* Define o peso da fonte para negrito */
+}
+
 
 footer {
     background-color: #333;
